--- a/metadata.yaml
+++ b/metadata.yaml
@@ -36,6 +36,7 @@ subjects:
 - !lcsh 'Iran -- Description and travel'
 - !lcsh 'Physical geography -- Arabian Peninsula'
 - !lcsh 'Wahhabiyah'
+- GITenberg
 title: "A Pilgrimage to Nejd, the Cradle of the Arab Race. Vol. 2 [of 2]\r\nA Visit\
   \ to the Court of the Arab Emir, and \"our Persian Campaign.\""
 url: http://www.gutenberg.org/ebooks/42217
